@@ -1,7 +1,8 @@
 THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.
 
 PL-node-v0.0.4
- - ADD: an explicit MIT license
+ - ADD: An explicit MIT license
+ - FIX: Clean public/patterns/ before build 
 
 PL-node-v0.0.3
  - FIX: Install documentation was incomplete, should not have assumed grunt
